...
    <string name="all_uuid_generation">Generate UUID</string>
    <string name="all_url_shortener">Minify</string>
    <string name="all_beacon_type">Beacon Type</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="action_screen_on">Keep screen ON</string>
    <string name="action_about">About this app</string>
    <string name="action_settings">Settings</string>
    <string name="action_autodiagnostic">Check maximal broadcast</string>
    <string name="action_broadcast_stop">Stop all broadcasts</string>
    <string name="action_edit">Edit Mode</string>
    <string name="about_title">About this app</string>
    <string name="about_version" translatable="false">Version: %1$s\nCode: %2$d\nBuild: %3$s</string>
    <string name="about_author" translatable="false">Twitter: <b><a href="https://twitter.com/vhiribarren">@vhiribarren</a></b>\n<b>©2016, 2017, 2019 Vincent Hiribarren</b></string>
    <string name="about_rate_button">Rate this app</string>
    <string name="about_rate_info">This app is free and done in my leisure time. I will be happy to have your feedback.</string>
    <string name="about_licenses_button">Open Source Licenses</string>
    <string name="about_licenses_title">Used Open Source Software</string>
    <string name="main_tab_simulator">Simulator</string>
    <string name="main_tab_scanner">Scanner</string>
...
